--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,12 @@
 @plugin '@tailwindcss/typography';
 @custom-variant dark (&:is(.dark *));
 
+@layer base {
+  html {
+    font-family: Arial, sans-serif;
+  }
+}
+
 /*
   The default border color has changed to `currentColor` in Tailwind CSS v4,
   so we've added these compatibility styles to make sure everything still
